busybox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-box
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busbox
        image: mendhak/http-https-echo:26
        #command: ["/bin/sh"]
        #args: ["-c", "cat /etc/hosts && sleep 3600"]
        ports:
        - containerPort: 80
        securityContext:
          privileged: true
          runAsUser: 0
