busybox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
spec:
  type: ClusterIP #NodePort #LoadBalancer #ClusterIP
  externalTrafficPolicy: Local
  ports:
  - targetPort: 8080
    port: 80
    name: http
  - targetPort: 8443
    port: 443
    name: https
  selector:
    app: busybox
